Update function add_day in query cosmos (and gremlin_connection)

--- a/nbs/query_cosmos.ipynb
+++ b/nbs/query_cosmos.ipynb
@@ -178,7 +178,7 @@
     "#| export\n",
     "\n",
     "def add_day(date):\n",
-    "    return convert_date_to_proper_format(date) + timedelta(days=1)"
+    "    return (pd.to_datetime(date) + timedelta(days=1)).strftime(\"%Y-%m-%dT%H:%M:%SZ\")"
    ]
   },
   {
