Tried adding ensuretoken validation in client

--- a/nbs/query_cosmos.ipynb
+++ b/nbs/query_cosmos.ipynb
@@ -112,6 +112,7 @@
     "        )\n",
     "\n",
     "        try:\n",
+    "            self.ensure_token_validity()\n",
     "            yield gremlin_client\n",
     "        finally:\n",
     "            gremlin_client.close() \n",
@@ -180,6 +181,12 @@
     "def add_day(date):\n",
     "    return (pd.to_datetime(date) + timedelta(days=1)).strftime(\"%Y-%m-%dT%H:%M:%SZ\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e3e44ad",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
