Update cosmos to faster edge querying

--- a/nbs/query_cosmos.ipynb
+++ b/nbs/query_cosmos.ipynb
@@ -213,7 +213,7 @@
     "    query = f\"\"\"\n",
     "    g.V().hasLabel('operations')\n",
     "        .has('startTimeUTC', gt('{start_date}')).has('endTimeUTC', lt('{end_date}'))\n",
-    "        .inE('PERFORMED').outV()  \n",
+    "        .in('PERFORMED')\n",
     "        .group().by(values('properties', 'rigName')).by(values('id'))\n",
     "    \"\"\"\n",
     "\n",
@@ -236,8 +236,8 @@
     "    if end_date is None:\n",
     "        end_date = add_day(start_date)\n",
     "    query = f\"\"\"g.V('{rigId}')\n",
-    "                .outE().hasLabel('PERFORMED').inV().has('startTimeUTC', gt('{start_date}')).has('endTimeUTC',lt('{end_date}'))\n",
-    "                .outE().hasLabel('ON').inV()\n",
+    "                .out('PERFORMED').has('startTimeUTC', gt('{start_date}')).has('endTimeUTC',lt('{end_date}'))\n",
+    "                .out('ON')\n",
     "                   .group().by(values('properties', 'wellboreName')).by(values('id'))\n",
     "                \"\"\"\n",
     "\n",
@@ -254,11 +254,8 @@
    "source": [
     "#| export\n",
     "\n",
-    "def query_rigs(rigId, start_date, end_date=None):\n",
-    "    start_date = convert_date_to_proper_format(start_date)\n",
-    "    if end_date is None:\n",
-    "        end_date = add_day(start_date)\n",
-    "    query= f\"\"\"g.V('{rigId}').outE().hasLabel('PERFORMED').inV()\n",
+    "def query_rigs(rigId, start_date, end_date):\n",
+    "    query= f\"\"\"g.V('{rigId}').out('PERFORMED')\n",
     "                .has('startTimeUTC', gt('{start_date}')).has('endTimeUTC',lt('{end_date}')) \n",
     "                    .project('startTimeUTC', 'endTimeUTC', 'conveyance','mainActivity',  'activityName', 'description', 'activityCategory')\n",
     "                    .by(values('properties', 'startTimeUTC'))\n",
