--- a/nbs/adx.ipynb
+++ b/nbs/adx.ipynb
@@ -49,7 +49,7 @@
     "from azure.kusto.data import KustoClient, KustoConnectionStringBuilder \n",
     "from azure.kusto.data.helpers import dataframe_from_result_table\n",
     "from azure.keyvault.secrets import SecretClient\n",
-    "import pandas as pd\n",
+    "# import pandas as pd\n",
     "import os"
    ]
   },
@@ -61,9 +61,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "os.environ['key_vault_url'] = \"https://nebaridia.vault.azure.net/\"\n",
+    "# os.environ['key_vault_url'] = \"https://nebaridia.vault.azure.net/\"\n",
+    "key_vault_url = \"https://nebaridia.vault.azure.net/\"\n",
     "credential = DefaultAzureCredential()\n",
-    "secret_client = SecretClient(vault_url=os.environ.get('key_vault_url'), credential=credential)"
+    "secret_client = SecretClient(vault_url=key_vault_url, credential=credential)"
    ]
   },
   {
@@ -106,13 +107,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_nbdev",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.11.14"
   }
  },
  "nbformat": 4,
